Cleanup in tests project

--- a/WROCERBackendUnitTests/WROCERBackendUnitTests.csproj
+++ b/WROCERBackendUnitTests/WROCERBackendUnitTests.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\WROCERBackend\WROCERBackend.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DataTests\" />
+  </ItemGroup>
+
 </Project>
