Added database migration, added database service to project and database dictionaries code generator

--- a/WROCERBackend/WROCERBackend.csproj
+++ b/WROCERBackend/WROCERBackend.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Model\DataModel\DatabaseClassGenerator.ps1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
