--- a/DatabaseFiller/DatabaseFiller.csproj
+++ b/DatabaseFiller/DatabaseFiller.csproj
@@ -6,4 +6,12 @@
     <StartupObject>DatabaseFiller.Program</StartupObject>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\WROCERBackend\WROCERBackend.csproj" />
+  </ItemGroup>
+
 </Project>
