--- a/WROCERBackend/WROCERBackend.csproj
+++ b/WROCERBackend/WROCERBackend.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20190127120021_DatabaseWROCERv3.cs" />
+    <Compile Remove="Migrations\20190127120021_DatabaseWROCERv3.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="Model\DataModel\DatabaseClassGenerator.ps1" />
   </ItemGroup>
 
@@ -13,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="EntityFramework" Version="6.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
